windows/pascal_simple_compiler_yacc.output
Terminals unused in grammar

   ERROR_STRING


State 52 conflicts: 1 shift/reduce
State 75 conflicts: 2 shift/reduce
State 76 conflicts: 2 shift/reduce


Grammar

    0 $accept: ProgramDefinition $end

    1 ProgramDefinition: PROGRAM IDENTIFIER SEMICOLON SubProgram DOT

    2 SubProgram: VariableDefinition CompoundStatement

    3 VariableDefinition: VAR VariableDefinitionList SEMICOLON

    4 VariableDefinitionList: VariableDefinitionList SEMICOLON VariableDefinitionStatement
    5                       | VariableDefinitionStatement

    6 VariableDefinitionStatement: VariableList COLON Type

    7 Type: INTEGER
    8     | REAL

    9 VariableList: VariableList COMMA Variable
   10             | Variable

   11 StatementList: StatementSemicoln Statement
   12              | Statement

   13 StatementSemicoln: StatementList SEMICOLON

   14 Statement: AssignmentStatement
   15          | IfStatementElse Statement
   16          | IfBoolExpressionThen Statement
   17          | WhileBoolExpressionDo Statement
   18          | CompoundStatement
   19          | /* empty */

   20 CompoundStatement: STATEMENT_BEGIN StatementSemicoln STATEMENT_END

   21 AssignmentStatement: Variable ASSIGN Expression

   22 IfStatementElse: IfBoolExpressionThen Statement ELSE

   23 IfBoolExpressionThen: IF BoolExpression THEN

   24 WhileBoolExpressionDo: While BoolExpression DO

   25 While: WHILE

   26 Expression: Expression ADD Expression
   27           | Expression SUB Expression
   28           | Expression MUL Expression
   29           | Expression DIV Expression
   30           | LP Expression RP
   31           | '-' Expression
   32           | Variable
   33           | Constant

   34 BoolExpression: Expression RelationOperator Expression
   35               | BoolExpressionAnd BoolExpression
   36               | BoolExpressionOR BoolExpression
   37               | NOT BoolExpression
   38               | LP BoolExpression RP

   39 BoolExpressionAnd: BoolExpression AND

   40 BoolExpressionOR: BoolExpression OR

   41 Variable: IDENTIFIER

   42 Constant: NUMBER_INTEGER
   43         | NUMBER_REAL

   44 RelationOperator: LT
   45                 | GT
   46                 | LE
   47                 | GE
   48                 | EQ
   49                 | NE


Terminals, with rules where they appear

$end (0) 0
'-' (45) 31
error (256)
IDENTIFIER (258) 1 41
NUMBER_INTEGER (259) 42
NUMBER_REAL (260) 43
PROGRAM (261) 1
ERROR_STRING (262)
SEMICOLON (263) 1 3 4 13
COMMA (264) 9
COLON (265) 6
DOT (266) 1
VAR (267) 3
INTEGER (268) 7
REAL (269) 8
STATEMENT_BEGIN (270) 20
STATEMENT_END (271) 20
ASSIGN (272) 21
IF (273) 23
ELSE (274) 22
THEN (275) 23
WHILE (276) 25
DO (277) 24
ADD (278) 26
SUB (279) 27
MUL (280) 28
DIV (281) 29
LP (282) 30 38
RP (283) 30 38
AND (284) 39
OR (285) 40
NOT (286) 37
LT (287) 44
GT (288) 45
LE (289) 46
GE (290) 47
EQ (291) 48
NE (292) 49
UMINUS (293)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
ProgramDefinition (41)
    on left: 1, on right: 0
SubProgram (42)
    on left: 2, on right: 1
VariableDefinition (43)
    on left: 3, on right: 2
VariableDefinitionList (44)
    on left: 4 5, on right: 3 4
VariableDefinitionStatement (45)
    on left: 6, on right: 4 5
Type (46)
    on left: 7 8, on right: 6
VariableList (47)
    on left: 9 10, on right: 6 9
StatementList (48)
    on left: 11 12, on right: 13
StatementSemicoln (49)
    on left: 13, on right: 11 20
Statement (50)
    on left: 14 15 16 17 18 19, on right: 11 12 15 16 17 22
CompoundStatement (51)
    on left: 20, on right: 2 18
AssignmentStatement (52)
    on left: 21, on right: 14
IfStatementElse (53)
    on left: 22, on right: 15
IfBoolExpressionThen (54)
    on left: 23, on right: 16 22
WhileBoolExpressionDo (55)
    on left: 24, on right: 17
While (56)
    on left: 25, on right: 24
Expression (57)
    on left: 26 27 28 29 30 31 32 33, on right: 21 26 27 28 29 30 31
    34
BoolExpression (58)
    on left: 34 35 36 37 38, on right: 23 24 35 36 37 38 39 40
BoolExpressionAnd (59)
    on left: 39, on right: 35
BoolExpressionOR (60)
    on left: 40, on right: 36
Variable (61)
    on left: 41, on right: 9 10 21 32
Constant (62)
    on left: 42 43, on right: 33
RelationOperator (63)
    on left: 44 45 46 47 48 49, on right: 34


State 0

    0 $accept: . ProgramDefinition $end

    PROGRAM  shift, and go to state 1

    ProgramDefinition  go to state 2


State 1

    1 ProgramDefinition: PROGRAM . IDENTIFIER SEMICOLON SubProgram DOT

    IDENTIFIER  shift, and go to state 3


State 2

    0 $accept: ProgramDefinition . $end

    $end  shift, and go to state 4


State 3

    1 ProgramDefinition: PROGRAM IDENTIFIER . SEMICOLON SubProgram DOT

    SEMICOLON  shift, and go to state 5


State 4

    0 $accept: ProgramDefinition $end .

    $default  accept


State 5

    1 ProgramDefinition: PROGRAM IDENTIFIER SEMICOLON . SubProgram DOT

    VAR  shift, and go to state 6

    SubProgram          go to state 7
    VariableDefinition  go to state 8


State 6

    3 VariableDefinition: VAR . VariableDefinitionList SEMICOLON

    IDENTIFIER  shift, and go to state 9

    VariableDefinitionList       go to state 10
    VariableDefinitionStatement  go to state 11
    VariableList                 go to state 12
    Variable                     go to state 13


State 7

    1 ProgramDefinition: PROGRAM IDENTIFIER SEMICOLON SubProgram . DOT

    DOT  shift, and go to state 14


State 8

    2 SubProgram: VariableDefinition . CompoundStatement

    STATEMENT_BEGIN  shift, and go to state 15

    CompoundStatement  go to state 16


State 9

   41 Variable: IDENTIFIER .

    $default  reduce using rule 41 (Variable)


State 10

    3 VariableDefinition: VAR VariableDefinitionList . SEMICOLON
    4 VariableDefinitionList: VariableDefinitionList . SEMICOLON VariableDefinitionStatement

    SEMICOLON  shift, and go to state 17


State 11

    5 VariableDefinitionList: VariableDefinitionStatement .

    $default  reduce using rule 5 (VariableDefinitionList)


State 12

    6 VariableDefinitionStatement: VariableList . COLON Type
    9 VariableList: VariableList . COMMA Variable

    COMMA  shift, and go to state 18
    COLON  shift, and go to state 19


State 13

   10 VariableList: Variable .

    $default  reduce using rule 10 (VariableList)


State 14

    1 ProgramDefinition: PROGRAM IDENTIFIER SEMICOLON SubProgram DOT .

    $default  reduce using rule 1 (ProgramDefinition)


State 15

   20 CompoundStatement: STATEMENT_BEGIN . StatementSemicoln STATEMENT_END

    IDENTIFIER       shift, and go to state 9
    STATEMENT_BEGIN  shift, and go to state 15
    IF               shift, and go to state 20
    WHILE            shift, and go to state 21

    $default  reduce using rule 19 (Statement)

    StatementList          go to state 22
    StatementSemicoln      go to state 23
    Statement              go to state 24
    CompoundStatement      go to state 25
    AssignmentStatement    go to state 26
    IfStatementElse        go to state 27
    IfBoolExpressionThen   go to state 28
    WhileBoolExpressionDo  go to state 29
    While                  go to state 30
    Variable               go to state 31


State 16

    2 SubProgram: VariableDefinition CompoundStatement .

    $default  reduce using rule 2 (SubProgram)


State 17

    3 VariableDefinition: VAR VariableDefinitionList SEMICOLON .
    4 VariableDefinitionList: VariableDefinitionList SEMICOLON . VariableDefinitionStatement

    IDENTIFIER  shift, and go to state 9

    $default  reduce using rule 3 (VariableDefinition)

    VariableDefinitionStatement  go to state 32
    VariableList                 go to state 12
    Variable                     go to state 13


State 18

    9 VariableList: VariableList COMMA . Variable

    IDENTIFIER  shift, and go to state 9

    Variable  go to state 33


State 19

    6 VariableDefinitionStatement: VariableList COLON . Type

    INTEGER  shift, and go to state 34
    REAL     shift, and go to state 35

    Type  go to state 36


State 20

   23 IfBoolExpressionThen: IF . BoolExpression THEN

    IDENTIFIER      shift, and go to state 9
    NUMBER_INTEGER  shift, and go to state 37
    NUMBER_REAL     shift, and go to state 38
    LP              shift, and go to state 39
    NOT             shift, and go to state 40
    '-'             shift, and go to state 41

    Expression         go to state 42
    BoolExpression     go to state 43
    BoolExpressionAnd  go to state 44
    BoolExpressionOR   go to state 45
    Variable           go to state 46
    Constant           go to state 47


State 21

   25 While: WHILE .

    $default  reduce using rule 25 (While)


State 22

   13 StatementSemicoln: StatementList . SEMICOLON

    SEMICOLON  shift, and go to state 48


State 23

   11 StatementList: StatementSemicoln . Statement
   20 CompoundStatement: STATEMENT_BEGIN StatementSemicoln . STATEMENT_END

    IDENTIFIER       shift, and go to state 9
    STATEMENT_BEGIN  shift, and go to state 15
    STATEMENT_END    shift, and go to state 49
    IF               shift, and go to state 20
    WHILE            shift, and go to state 21

    $default  reduce using rule 19 (Statement)

    Statement              go to state 50
    CompoundStatement      go to state 25
    AssignmentStatement    go to state 26
    IfStatementElse        go to state 27
    IfBoolExpressionThen   go to state 28
    WhileBoolExpressionDo  go to state 29
    While                  go to state 30
    Variable               go to state 31


State 24

   12 StatementList: Statement .

    $default  reduce using rule 12 (StatementList)


State 25

   18 Statement: CompoundStatement .

    $default  reduce using rule 18 (Statement)


State 26

   14 Statement: AssignmentStatement .

    $default  reduce using rule 14 (Statement)


State 27

   15 Statement: IfStatementElse . Statement

    IDENTIFIER       shift, and go to state 9
    STATEMENT_BEGIN  shift, and go to state 15
    IF               shift, and go to state 20
    WHILE            shift, and go to state 21

    $default  reduce using rule 19 (Statement)

    Statement              go to state 51
    CompoundStatement      go to state 25
    AssignmentStatement    go to state 26
    IfStatementElse        go to state 27
    IfBoolExpressionThen   go to state 28
    WhileBoolExpressionDo  go to state 29
    While                  go to state 30
    Variable               go to state 31


State 28

   16 Statement: IfBoolExpressionThen . Statement
   22 IfStatementElse: IfBoolExpressionThen . Statement ELSE

    IDENTIFIER       shift, and go to state 9
    STATEMENT_BEGIN  shift, and go to state 15
    IF               shift, and go to state 20
    WHILE            shift, and go to state 21

    $default  reduce using rule 19 (Statement)

    Statement              go to state 52
    CompoundStatement      go to state 25
    AssignmentStatement    go to state 26
    IfStatementElse        go to state 27
    IfBoolExpressionThen   go to state 28
    WhileBoolExpressionDo  go to state 29
    While                  go to state 30
    Variable               go to state 31


State 29

   17 Statement: WhileBoolExpressionDo . Statement

    IDENTIFIER       shift, and go to state 9
    STATEMENT_BEGIN  shift, and go to state 15
    IF               shift, and go to state 20
    WHILE            shift, and go to state 21

    $default  reduce using rule 19 (Statement)

    Statement              go to state 53
    CompoundStatement      go to state 25
    AssignmentStatement    go to state 26
    IfStatementElse        go to state 27
    IfBoolExpressionThen   go to state 28
    WhileBoolExpressionDo  go to state 29
    While                  go to state 30
    Variable               go to state 31


State 30

   24 WhileBoolExpressionDo: While . BoolExpression DO

    IDENTIFIER      shift, and go to state 9
    NUMBER_INTEGER  shift, and go to state 37
    NUMBER_REAL     shift, and go to state 38
    LP              shift, and go to state 39
    NOT             shift, and go to state 40
    '-'             shift, and go to state 41

    Expression         go to state 42
    BoolExpression     go to state 54
    BoolExpressionAnd  go to state 44
    BoolExpressionOR   go to state 45
    Variable           go to state 46
    Constant           go to state 47


State 31

   21 AssignmentStatement: Variable . ASSIGN Expression

    ASSIGN  shift, and go to state 55


State 32

    4 VariableDefinitionList: VariableDefinitionList SEMICOLON VariableDefinitionStatement .

    $default  reduce using rule 4 (VariableDefinitionList)


State 33

    9 VariableList: VariableList COMMA Variable .

    $default  reduce using rule 9 (VariableList)


State 34

    7 Type: INTEGER .

    $default  reduce using rule 7 (Type)


State 35

    8 Type: REAL .

    $default  reduce using rule 8 (Type)


State 36

    6 VariableDefinitionStatement: VariableList COLON Type .

    $default  reduce using rule 6 (VariableDefinitionStatement)


State 37

   42 Constant: NUMBER_INTEGER .

    $default  reduce using rule 42 (Constant)


State 38

   43 Constant: NUMBER_REAL .

    $default  reduce using rule 43 (Constant)


State 39

   30 Expression: LP . Expression RP
   38 BoolExpression: LP . BoolExpression RP

    IDENTIFIER      shift, and go to state 9
    NUMBER_INTEGER  shift, and go to state 37
    NUMBER_REAL     shift, and go to state 38
    LP              shift, and go to state 39
    NOT             shift, and go to state 40
    '-'             shift, and go to state 41

    Expression         go to state 56
    BoolExpression     go to state 57
    BoolExpressionAnd  go to state 44
    BoolExpressionOR   go to state 45
    Variable           go to state 46
    Constant           go to state 47


State 40

   37 BoolExpression: NOT . BoolExpression

    IDENTIFIER      shift, and go to state 9
    NUMBER_INTEGER  shift, and go to state 37
    NUMBER_REAL     shift, and go to state 38
    LP              shift, and go to state 39
    NOT             shift, and go to state 40
    '-'             shift, and go to state 41

    Expression         go to state 42
    BoolExpression     go to state 58
    BoolExpressionAnd  go to state 44
    BoolExpressionOR   go to state 45
    Variable           go to state 46
    Constant           go to state 47


State 41

   31 Expression: '-' . Expression

    IDENTIFIER      shift, and go to state 9
    NUMBER_INTEGER  shift, and go to state 37
    NUMBER_REAL     shift, and go to state 38
    LP              shift, and go to state 59
    '-'             shift, and go to state 41

    Expression  go to state 60
    Variable    go to state 46
    Constant    go to state 47


State 42

   26 Expression: Expression . ADD Expression
   27           | Expression . SUB Expression
   28           | Expression . MUL Expression
   29           | Expression . DIV Expression
   34 BoolExpression: Expression . RelationOperator Expression

    ADD  shift, and go to state 61
    SUB  shift, and go to state 62
    MUL  shift, and go to state 63
    DIV  shift, and go to state 64
    LT   shift, and go to state 65
    GT   shift, and go to state 66
    LE   shift, and go to state 67
    GE   shift, and go to state 68
    EQ   shift, and go to state 69
    NE   shift, and go to state 70

    RelationOperator  go to state 71


State 43

   23 IfBoolExpressionThen: IF BoolExpression . THEN
   39 BoolExpressionAnd: BoolExpression . AND
   40 BoolExpressionOR: BoolExpression . OR

    THEN  shift, and go to state 72
    AND   shift, and go to state 73
    OR    shift, and go to state 74


State 44

   35 BoolExpression: BoolExpressionAnd . BoolExpression

    IDENTIFIER      shift, and go to state 9
    NUMBER_INTEGER  shift, and go to state 37
    NUMBER_REAL     shift, and go to state 38
    LP              shift, and go to state 39
    NOT             shift, and go to state 40
    '-'             shift, and go to state 41

    Expression         go to state 42
    BoolExpression     go to state 75
    BoolExpressionAnd  go to state 44
    BoolExpressionOR   go to state 45
    Variable           go to state 46
    Constant           go to state 47


State 45

   36 BoolExpression: BoolExpressionOR . BoolExpression

    IDENTIFIER      shift, and go to state 9
    NUMBER_INTEGER  shift, and go to state 37
    NUMBER_REAL     shift, and go to state 38
    LP              shift, and go to state 39
    NOT             shift, and go to state 40
    '-'             shift, and go to state 41

    Expression         go to state 42
    BoolExpression     go to state 76
    BoolExpressionAnd  go to state 44
    BoolExpressionOR   go to state 45
    Variable           go to state 46
    Constant           go to state 47


State 46

   32 Expression: Variable .

    $default  reduce using rule 32 (Expression)


State 47

   33 Expression: Constant .

    $default  reduce using rule 33 (Expression)


State 48

   13 StatementSemicoln: StatementList SEMICOLON .

    $default  reduce using rule 13 (StatementSemicoln)


State 49

   20 CompoundStatement: STATEMENT_BEGIN StatementSemicoln STATEMENT_END .

    $default  reduce using rule 20 (CompoundStatement)


State 50

   11 StatementList: StatementSemicoln Statement .

    $default  reduce using rule 11 (StatementList)


State 51

   15 Statement: IfStatementElse Statement .

    $default  reduce using rule 15 (Statement)


State 52

   16 Statement: IfBoolExpressionThen Statement .
   22 IfStatementElse: IfBoolExpressionThen Statement . ELSE

    ELSE  shift, and go to state 77

    ELSE      [reduce using rule 16 (Statement)]
    $default  reduce using rule 16 (Statement)


State 53

   17 Statement: WhileBoolExpressionDo Statement .

    $default  reduce using rule 17 (Statement)


State 54

   24 WhileBoolExpressionDo: While BoolExpression . DO
   39 BoolExpressionAnd: BoolExpression . AND
   40 BoolExpressionOR: BoolExpression . OR

    DO   shift, and go to state 78
    AND  shift, and go to state 73
    OR   shift, and go to state 74


State 55

   21 AssignmentStatement: Variable ASSIGN . Expression

    IDENTIFIER      shift, and go to state 9
    NUMBER_INTEGER  shift, and go to state 37
    NUMBER_REAL     shift, and go to state 38
    LP              shift, and go to state 59
    '-'             shift, and go to state 41

    Expression  go to state 79
    Variable    go to state 46
    Constant    go to state 47


State 56

   26 Expression: Expression . ADD Expression
   27           | Expression . SUB Expression
   28           | Expression . MUL Expression
   29           | Expression . DIV Expression
   30           | LP Expression . RP
   34 BoolExpression: Expression . RelationOperator Expression

    ADD  shift, and go to state 61
    SUB  shift, and go to state 62
    MUL  shift, and go to state 63
    DIV  shift, and go to state 64
    RP   shift, and go to state 80
    LT   shift, and go to state 65
    GT   shift, and go to state 66
    LE   shift, and go to state 67
    GE   shift, and go to state 68
    EQ   shift, and go to state 69
    NE   shift, and go to state 70

    RelationOperator  go to state 71


State 57

   38 BoolExpression: LP BoolExpression . RP
   39 BoolExpressionAnd: BoolExpression . AND
   40 BoolExpressionOR: BoolExpression . OR

    RP   shift, and go to state 81
    AND  shift, and go to state 73
    OR   shift, and go to state 74


State 58

   37 BoolExpression: NOT BoolExpression .
   39 BoolExpressionAnd: BoolExpression . AND
   40 BoolExpressionOR: BoolExpression . OR

    $default  reduce using rule 37 (BoolExpression)


State 59

   30 Expression: LP . Expression RP

    IDENTIFIER      shift, and go to state 9
    NUMBER_INTEGER  shift, and go to state 37
    NUMBER_REAL     shift, and go to state 38
    LP              shift, and go to state 59
    '-'             shift, and go to state 41

    Expression  go to state 82
    Variable    go to state 46
    Constant    go to state 47


State 60

   26 Expression: Expression . ADD Expression
   27           | Expression . SUB Expression
   28           | Expression . MUL Expression
   29           | Expression . DIV Expression
   31           | '-' Expression .

    $default  reduce using rule 31 (Expression)


State 61

   26 Expression: Expression ADD . Expression

    IDENTIFIER      shift, and go to state 9
    NUMBER_INTEGER  shift, and go to state 37
    NUMBER_REAL     shift, and go to state 38
    LP              shift, and go to state 59
    '-'             shift, and go to state 41

    Expression  go to state 83
    Variable    go to state 46
    Constant    go to state 47


State 62

   27 Expression: Expression SUB . Expression

    IDENTIFIER      shift, and go to state 9
    NUMBER_INTEGER  shift, and go to state 37
    NUMBER_REAL     shift, and go to state 38
    LP              shift, and go to state 59
    '-'             shift, and go to state 41

    Expression  go to state 84
    Variable    go to state 46
    Constant    go to state 47


State 63

   28 Expression: Expression MUL . Expression

    IDENTIFIER      shift, and go to state 9
    NUMBER_INTEGER  shift, and go to state 37
    NUMBER_REAL     shift, and go to state 38
    LP              shift, and go to state 59
    '-'             shift, and go to state 41

    Expression  go to state 85
    Variable    go to state 46
    Constant    go to state 47


State 64

   29 Expression: Expression DIV . Expression

    IDENTIFIER      shift, and go to state 9
    NUMBER_INTEGER  shift, and go to state 37
    NUMBER_REAL     shift, and go to state 38
    LP              shift, and go to state 59
    '-'             shift, and go to state 41

    Expression  go to state 86
    Variable    go to state 46
    Constant    go to state 47


State 65

   44 RelationOperator: LT .

    $default  reduce using rule 44 (RelationOperator)


State 66

   45 RelationOperator: GT .

    $default  reduce using rule 45 (RelationOperator)


State 67

   46 RelationOperator: LE .

    $default  reduce using rule 46 (RelationOperator)


State 68

   47 RelationOperator: GE .

    $default  reduce using rule 47 (RelationOperator)


State 69

   48 RelationOperator: EQ .

    $default  reduce using rule 48 (RelationOperator)


State 70

   49 RelationOperator: NE .

    $default  reduce using rule 49 (RelationOperator)


State 71

   34 BoolExpression: Expression RelationOperator . Expression

    IDENTIFIER      shift, and go to state 9
    NUMBER_INTEGER  shift, and go to state 37
    NUMBER_REAL     shift, and go to state 38
    LP              shift, and go to state 59
    '-'             shift, and go to state 41

    Expression  go to state 87
    Variable    go to state 46
    Constant    go to state 47


State 72

   23 IfBoolExpressionThen: IF BoolExpression THEN .

    $default  reduce using rule 23 (IfBoolExpressionThen)


State 73

   39 BoolExpressionAnd: BoolExpression AND .

    $default  reduce using rule 39 (BoolExpressionAnd)


State 74

   40 BoolExpressionOR: BoolExpression OR .

    $default  reduce using rule 40 (BoolExpressionOR)


State 75

   35 BoolExpression: BoolExpressionAnd BoolExpression .
   39 BoolExpressionAnd: BoolExpression . AND
   40 BoolExpressionOR: BoolExpression . OR

    AND  shift, and go to state 73
    OR   shift, and go to state 74

    AND       [reduce using rule 35 (BoolExpression)]
    OR        [reduce using rule 35 (BoolExpression)]
    $default  reduce using rule 35 (BoolExpression)


State 76

   36 BoolExpression: BoolExpressionOR BoolExpression .
   39 BoolExpressionAnd: BoolExpression . AND
   40 BoolExpressionOR: BoolExpression . OR

    AND  shift, and go to state 73
    OR   shift, and go to state 74

    AND       [reduce using rule 36 (BoolExpression)]
    OR        [reduce using rule 36 (BoolExpression)]
    $default  reduce using rule 36 (BoolExpression)


State 77

   22 IfStatementElse: IfBoolExpressionThen Statement ELSE .

    $default  reduce using rule 22 (IfStatementElse)


State 78

   24 WhileBoolExpressionDo: While BoolExpression DO .

    $default  reduce using rule 24 (WhileBoolExpressionDo)


State 79

   21 AssignmentStatement: Variable ASSIGN Expression .
   26 Expression: Expression . ADD Expression
   27           | Expression . SUB Expression
   28           | Expression . MUL Expression
   29           | Expression . DIV Expression

    ADD  shift, and go to state 61
    SUB  shift, and go to state 62
    MUL  shift, and go to state 63
    DIV  shift, and go to state 64

    $default  reduce using rule 21 (AssignmentStatement)


State 80

   30 Expression: LP Expression RP .

    $default  reduce using rule 30 (Expression)


State 81

   38 BoolExpression: LP BoolExpression RP .

    $default  reduce using rule 38 (BoolExpression)


State 82

   26 Expression: Expression . ADD Expression
   27           | Expression . SUB Expression
   28           | Expression . MUL Expression
   29           | Expression . DIV Expression
   30           | LP Expression . RP

    ADD  shift, and go to state 61
    SUB  shift, and go to state 62
    MUL  shift, and go to state 63
    DIV  shift, and go to state 64
    RP   shift, and go to state 80


State 83

   26 Expression: Expression . ADD Expression
   26           | Expression ADD Expression .
   27           | Expression . SUB Expression
   28           | Expression . MUL Expression
   29           | Expression . DIV Expression

    MUL  shift, and go to state 63
    DIV  shift, and go to state 64

    $default  reduce using rule 26 (Expression)


State 84

   26 Expression: Expression . ADD Expression
   27           | Expression . SUB Expression
   27           | Expression SUB Expression .
   28           | Expression . MUL Expression
   29           | Expression . DIV Expression

    MUL  shift, and go to state 63
    DIV  shift, and go to state 64

    $default  reduce using rule 27 (Expression)


State 85

   26 Expression: Expression . ADD Expression
   27           | Expression . SUB Expression
   28           | Expression . MUL Expression
   28           | Expression MUL Expression .
   29           | Expression . DIV Expression

    $default  reduce using rule 28 (Expression)


State 86

   26 Expression: Expression . ADD Expression
   27           | Expression . SUB Expression
   28           | Expression . MUL Expression
   29           | Expression . DIV Expression
   29           | Expression DIV Expression .

    $default  reduce using rule 29 (Expression)


State 87

   26 Expression: Expression . ADD Expression
   27           | Expression . SUB Expression
   28           | Expression . MUL Expression
   29           | Expression . DIV Expression
   34 BoolExpression: Expression RelationOperator Expression .

    ADD  shift, and go to state 61
    SUB  shift, and go to state 62
    MUL  shift, and go to state 63
    DIV  shift, and go to state 64

    $default  reduce using rule 34 (BoolExpression)
